@@ -48,5 +48,5 @@ If you start a new game to this BETA:
     
     - Run your game as usual.
     
-    - Report Bugs to brazilofmux@gmail.com following the prcedure in README.
+    - Report Bugs to brazilofmux@gmail.com following the procedure in README.
 
